-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
None
-
Affects Version/s: None
-
Component/s: hotspot
The following condition was detected by ShenandoahVerifier:
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/ANT.AMAZON.COM/kdnilsen/github/shenandoah.fix-bootstrap-logs/src/hotspot/share/gc/shenandoah/shenandoahVerifier.cpp:1275), pid=3504095, tid=3504111
# Error: Verify init-update-refs remembered set violation; clean card should be dirty
Referenced from:
interior location: 0x00000004e9654b88
inside Java heap
not in collection set
region: | 3067|R |O|BTE 4e9400000, 4e9695000, 4e9800000|TAMS 4e9695000|UWM 4e9695000|U 2644K|T 0B|G 2064K|P 409K|S 171K|L 2478K|CP 0
Object:
0x00000004e9a28280 - klass 0x00000004eb0c1268 java.lang.invoke.LambdaFormEditor$Transform
not allocated after mark start
not after update watermark
marked strong
not marked weak
not in collection set
age: 0
mark: mark(is_neutral no_hash age=0)
region: | 3068|R |Y|BTE 4e9800000, 4e9b386d0, 4e9c00000|TAMS 4e9b386d0|UWM 4e9b386d0|U 3297K|T 0B|G 1249K|P 0B|S 2048K|L 2653K|CP 0
Forwardee:
(the object itself)
An rr recording of this issue is available here:
https://pernos.co/debug/4Vp9nzzxpUvXMOQW7UV1Hw/index.html
#
# A fatal error has been detected by the Java Runtime Environment:
#
# Internal Error (/home/ANT.AMAZON.COM/kdnilsen/github/shenandoah.fix-bootstrap-logs/src/hotspot/share/gc/shenandoah/shenandoahVerifier.cpp:1275), pid=3504095, tid=3504111
# Error: Verify init-update-refs remembered set violation; clean card should be dirty
Referenced from:
interior location: 0x00000004e9654b88
inside Java heap
not in collection set
region: | 3067|R |O|BTE 4e9400000, 4e9695000, 4e9800000|TAMS 4e9695000|UWM 4e9695000|U 2644K|T 0B|G 2064K|P 409K|S 171K|L 2478K|CP 0
Object:
0x00000004e9a28280 - klass 0x00000004eb0c1268 java.lang.invoke.LambdaFormEditor$Transform
not allocated after mark start
not after update watermark
marked strong
not marked weak
not in collection set
age: 0
mark: mark(is_neutral no_hash age=0)
region: | 3068|R |Y|BTE 4e9800000, 4e9b386d0, 4e9c00000|TAMS 4e9b386d0|UWM 4e9b386d0|U 3297K|T 0B|G 1249K|P 0B|S 2048K|L 2653K|CP 0
Forwardee:
(the object itself)
An rr recording of this issue is available here:
https://pernos.co/debug/4Vp9nzzxpUvXMOQW7UV1Hw/index.html