8315044: GenShen: Verifier detects clean card should be dirty

Reviewed-by: ysr, wkemper